--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,8 @@
-.App {
-  text-align: center;
-}
+body{font-family: sans-serif}
+.panelBut {font-size: large;text-align: center;  color: darkgreen; background-color: aquamarine; padding: 5px; margin:2px; border: 2px solid blue; border-radius: 10% }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.panel{display:flex; flex-direction: row; padding: 2%; flex-wrap: wrap }
+.appHeader{margin: 3%; font-size:x-large; color:brown; border: 5% solid crimson}
+.contenter{margin:2%; padding:2%; color: bisque; background-color: darkmagenta; border: 10px solid blue}
+.selectedPanelBut {z-index: 3;box-shadow: 1px 3px lightcoral;font-size: large;text-align: center; width:10%; color: white; background-color: maroon; padding: 5px; margin:2px; border: 2px solid blue; border-radius: 10% }
+.addBut {font-size: x-large;text-align: center;  color: whitesmoke; background-color: darkblue; padding: 2px; margin:2px; border: 2px solid blue; border-radius: 10% }
